@@ -18,12 +18,12 @@ wombat_SOURCES = 	\
 wombat_LDADD =				\
 	$(EXTRA_GNOME_LIBS)		\
 	$(BONOBO_HTML_GNOME_LIBS)	\
-	$(top_builddir)/e-util/libeutil.la     \
-	-lpas				\
-	-lpcs				\
-	-lical				\
-	-lcalutil			\
-	$(top_builddir)/libversit/libversit.la \
+	$(top_builddir)/e-util/libeutil.la     			\
+	$(top_builddir)/addressbook/backend/pas/libpas.la     	\
+	$(top_builddir)/calendar/pcs/libpcs.la     		\
+	$(top_builddir)/libical/src/libical/libical.la     	\
+	$(top_builddir)/calendar/cal-util/libcalutil.la     	\
+	$(top_builddir)/libversit/libversit.la 			\
 	-lgnomevfs
 
 wombat_LDFLAGS = `gnome-config --libs gnorba` 
