@@ -7,8 +7,8 @@
 
 #include <config.h>
 #include <bonobo.h>
-#include <backend/pas-book-factory.h>
-#include <backend/pas-backend-file.h>
+#include <pas-book-factory.h>
+#include <pas-backend-file.h>
 #include <libgnomevfs/gnome-vfs-init.h>
 #include <libgnorba/gnorba.h>
 #include <cal-factory.h>
